# freertos_blink_per_core

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  freertos_hooks.c  main.c
